<resources>
    <string name="app_name">기숙사 체육대회 관리 시스템</string>
    <string name="top">탑</string>
    <string name="jungle">정글</string>
    <string name="mid">미드</string>
    <string name="bottom">원딜</string>
    <string name="support">서폿</string>
    <string name="line">Line</string>
    <string name="championImage">챔피언 사진</string>
    <string name="starcraft">스타크래프트</string>
    <string name="cartrider">카트라이더</string>
    <string name="rainbowsix">레인보우 식스 시즈</string>
    <string name="overwatch">오버워치</string>
    <string name="league_of_legend">리그 오브 레전드</string>
</resources>
