<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LOL.Activity.LOLActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="15sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/top"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/top1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/top2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/top3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/top4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/jungle"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="15sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/jungle"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/jungle1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/jungle"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/jungle2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/jungle"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/jungle3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/jungle"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/jungle4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="15sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/mid" />

            <ImageView
                android:id="@+id/mid1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/mid2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/mid3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/mid4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="15sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/bottom" />

            <ImageView
                android:id="@+id/bottom1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/bottom2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/bottom3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/bottom4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="15sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/support" />

            <ImageView
                android:id="@+id/support1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/support2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/support3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/support4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/top"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/class_group" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/class_group" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="서버에서 챔피언 가져오기"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>